gcc/testsuite/g++.dg/parse/dtor2.C
struct A {
  typedef A A2;
  ~A2(); // { dg-error "" }
};
